--- a/archives/toutiao-search/2023-10-13.md
+++ b/archives/toutiao-search/2023-10-13.md
@@ -1,52 +1,72 @@
 # 2023-10-13
 
-共 170 条
+共 185 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 13 2023 13:00:51 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Oct 13 2023 14:00:43 GMT+0800 (China Standard Time) -->
+1. [警方通报山东一男子当街鞭打女子](https://so.toutiao.com/search?keyword=警方通报山东一男子当街鞭打女子)
+1. [中国男篮有望递补金牌吗](https://so.toutiao.com/search?keyword=中国男篮有望递补金牌吗)
+1. [标准化助中国创新走向世界](https://so.toutiao.com/search?keyword=标准化助中国创新走向世界)
+1. [奔驰无视鸣笛强行变道出事故](https://so.toutiao.com/search?keyword=奔驰无视鸣笛强行变道出事故)
+1. [豆腐脑甜咸之争终于能和解了](https://so.toutiao.com/search?keyword=豆腐脑甜咸之争终于能和解了)
+1. [新华社战地记者直击巴以冲突](https://so.toutiao.com/search?keyword=新华社战地记者直击巴以冲突)
+1. [以方要求加沙北部上百万人迁至南部](https://so.toutiao.com/search?keyword=以方要求加沙北部上百万人迁至南部)
+1. [菲律宾男篮球员未通过兴奋剂检测](https://so.toutiao.com/search?keyword=菲律宾男篮球员未通过兴奋剂检测)
+1. [武大性骚扰男生是副区长之子？假的](https://so.toutiao.com/search?keyword=武大性骚扰男生是副区长之子？假的)
+1. [女子脱光“小三”衣服游街被判刑](https://so.toutiao.com/search?keyword=女子脱光“小三”衣服游街被判刑)
+1. [外媒关注欧盟对以色列发最强烈谴责](https://so.toutiao.com/search?keyword=外媒关注欧盟对以色列发最强烈谴责)
+1. [布林肯称哈马斯袭击相当于10次911](https://so.toutiao.com/search?keyword=布林肯称哈马斯袭击相当于10次911)
+1. [巴以冲突为何令韩国担心“突袭”](https://so.toutiao.com/search?keyword=巴以冲突为何令韩国担心“突袭”)
+1. [埃尔多安：以色列的反应相当于屠杀](https://so.toutiao.com/search?keyword=埃尔多安：以色列的反应相当于屠杀)
+1. [成都初中生校内身亡：系自缢](https://so.toutiao.com/search?keyword=成都初中生校内身亡：系自缢)
+1. [以军：准备好将哈马斯从地球上抹去](https://so.toutiao.com/search?keyword=以军：准备好将哈马斯从地球上抹去)
+1. [特朗普就巴以冲突表态](https://so.toutiao.com/search?keyword=特朗普就巴以冲突表态)
+1. [哈马斯自行生产火箭炮曝光](https://so.toutiao.com/search?keyword=哈马斯自行生产火箭炮曝光)
+1. [以军从哈马斯手中解救人质画面曝光](https://so.toutiao.com/search?keyword=以军从哈马斯手中解救人质画面曝光)
+1. [河南村民晒粮不占主干道形成风景线](https://so.toutiao.com/search?keyword=河南村民晒粮不占主干道形成风景线)
+1. [解放军台海击落美军机？军媒辟谣](https://so.toutiao.com/search?keyword=解放军台海击落美军机？军媒辟谣)
+1. [司机高速上倒车致连环事故后逃离](https://so.toutiao.com/search?keyword=司机高速上倒车致连环事故后逃离)
+1. [媒体：鼓励生育不能只盯着二孩](https://so.toutiao.com/search?keyword=媒体：鼓励生育不能只盯着二孩)
+1. [为何一夜之间美元停止加息](https://so.toutiao.com/search?keyword=为何一夜之间美元停止加息)
+1. [业内揭秘黄牛割肉退周杰伦门票原因](https://so.toutiao.com/search?keyword=业内揭秘黄牛割肉退周杰伦门票原因)
+1. [杜特尔特建议以方“把加沙变墓地”](https://so.toutiao.com/search?keyword=杜特尔特建议以方“把加沙变墓地”)
+1. [去年我国出生人口956万 二孩占近4成](https://so.toutiao.com/search?keyword=去年我国出生人口956万+二孩占近4成)
+1. [校运会开幕学生把马骑来了](https://so.toutiao.com/search?keyword=校运会开幕学生把马骑来了)
+1. [媒体：一汽丰田怼顾客损失不止10万](https://so.toutiao.com/search?keyword=媒体：一汽丰田怼顾客损失不止10万)
+1. [出生人口三孩占比15.0%预示着什么](https://so.toutiao.com/search?keyword=出生人口三孩占比15.0%预示着什么)
+1. [多地出现较多肺炎支原体感染患者](https://so.toutiao.com/search?keyword=多地出现较多肺炎支原体感染患者)
+1. [海清主演电影《我本是高山》定档](https://so.toutiao.com/search?keyword=海清主演电影《我本是高山》定档)
+1. [老师体罚学生致多处淤伤称心里着急](https://so.toutiao.com/search?keyword=老师体罚学生致多处淤伤称心里着急)
+1. [李湘王岳伦为王诗龄庆14岁生日](https://so.toutiao.com/search?keyword=李湘王岳伦为王诗龄庆14岁生日)
+1. [俄罗斯小朋友组团到黑河吃早餐](https://so.toutiao.com/search?keyword=俄罗斯小朋友组团到黑河吃早餐)
+1. [郑州楼市高库存的“极限拉扯”](https://so.toutiao.com/search?keyword=郑州楼市高库存的“极限拉扯”)
+1. [医生谈为什么肺癌越来越年轻化](https://so.toutiao.com/search?keyword=医生谈为什么肺癌越来越年轻化)
+1. [女方妈妈要彩礼男子母亲认为是骗婚](https://so.toutiao.com/search?keyword=女方妈妈要彩礼男子母亲认为是骗婚)
+1. [白宫：第二艘美国航母将抵达中东](https://so.toutiao.com/search?keyword=白宫：第二艘美国航母将抵达中东)
+1. [国内油价10月24日再次迎来调整](https://so.toutiao.com/search?keyword=国内油价10月24日再次迎来调整)
+1. [智己LS6年底城市NOA将大规模公测](https://so.toutiao.com/search?keyword=智己LS6年底城市NOA将大规模公测)
+1. [广州警方通报乘客裙子现不明液体](https://so.toutiao.com/search?keyword=广州警方通报乘客裙子现不明液体)
+1. [知情人士回应杨国强卖私人飞机偿债](https://so.toutiao.com/search?keyword=知情人士回应杨国强卖私人飞机偿债)
+1. [以人民币计价 中国9月出口下降0.6%](https://so.toutiao.com/search?keyword=以人民币计价+中国9月出口下降0.6%)
+1. [CIA承认：70年前的伊朗政变不民主](https://so.toutiao.com/search?keyword=CIA承认：70年前的伊朗政变不民主)
+1. [小孩被父亲关在车库出租房3天](https://so.toutiao.com/search?keyword=小孩被父亲关在车库出租房3天)
+1. [美国“左派”因为巴以起“内讧”](https://so.toutiao.com/search?keyword=美国“左派”因为巴以起“内讧”)
+1. [退休老人花20万买车遭孩子反对](https://so.toutiao.com/search?keyword=退休老人花20万买车遭孩子反对)
+1. [旅游博主：因是中国人在叙获善待](https://so.toutiao.com/search?keyword=旅游博主：因是中国人在叙获善待)
+1. [被举报性骚扰男生为保送生？武大回应](https://so.toutiao.com/search?keyword=被举报性骚扰男生为保送生？武大回应)
 1. [山东一男子当街鞭打女子 警方介入](https://so.toutiao.com/search?keyword=山东一男子当街鞭打女子+警方介入)
 1. [开发商降价对业主造成的损失谁承担](https://so.toutiao.com/search?keyword=开发商降价对业主造成的损失谁承担)
-1. [标准化助中国创新走向世界](https://so.toutiao.com/search?keyword=标准化助中国创新走向世界)
-1. [菲律宾男篮球员未通过兴奋剂检测](https://so.toutiao.com/search?keyword=菲律宾男篮球员未通过兴奋剂检测)
-1. [俄罗斯小朋友组团到黑河吃早餐](https://so.toutiao.com/search?keyword=俄罗斯小朋友组团到黑河吃早餐)
-1. [河南村民晒粮不占主干道形成风景线](https://so.toutiao.com/search?keyword=河南村民晒粮不占主干道形成风景线)
-1. [小孩被父亲关在车库出租房3天](https://so.toutiao.com/search?keyword=小孩被父亲关在车库出租房3天)
-1. [解放军台海击落美军机？军媒辟谣](https://so.toutiao.com/search?keyword=解放军台海击落美军机？军媒辟谣)
 1. [被指性骚扰男生是副区长之子？假的](https://so.toutiao.com/search?keyword=被指性骚扰男生是副区长之子？假的)
 1. [卡塔尔红新月会拨款援助加沙地带](https://so.toutiao.com/search?keyword=卡塔尔红新月会拨款援助加沙地带)
 1. [新华社战地记者直击巴以新一轮冲突](https://so.toutiao.com/search?keyword=新华社战地记者直击巴以新一轮冲突)
-1. [以军：准备好将哈马斯从地球上抹去](https://so.toutiao.com/search?keyword=以军：准备好将哈马斯从地球上抹去)
-1. [外媒关注欧盟对以色列发最强烈谴责](https://so.toutiao.com/search?keyword=外媒关注欧盟对以色列发最强烈谴责)
-1. [特朗普就巴以冲突表态](https://so.toutiao.com/search?keyword=特朗普就巴以冲突表态)
-1. [布林肯称哈马斯袭击相当于10次911](https://so.toutiao.com/search?keyword=布林肯称哈马斯袭击相当于10次911)
-1. [埃尔多安：以色列的反应相当于屠杀](https://so.toutiao.com/search?keyword=埃尔多安：以色列的反应相当于屠杀)
-1. [巴以冲突为何令韩国担心“突袭”](https://so.toutiao.com/search?keyword=巴以冲突为何令韩国担心“突袭”)
-1. [以军从哈马斯手中解救人质画面曝光](https://so.toutiao.com/search?keyword=以军从哈马斯手中解救人质画面曝光)
-1. [以方要求加沙北部上百万人迁至南部](https://so.toutiao.com/search?keyword=以方要求加沙北部上百万人迁至南部)
-1. [哈马斯自行生产火箭炮曝光](https://so.toutiao.com/search?keyword=哈马斯自行生产火箭炮曝光)
 1. [校运会开幕学生把家里养的马骑来了](https://so.toutiao.com/search?keyword=校运会开幕学生把家里养的马骑来了)
 1. [白宫称对乌克兰拨款已近耗尽](https://so.toutiao.com/search?keyword=白宫称对乌克兰拨款已近耗尽)
-1. [成都初中生校内身亡：系自缢](https://so.toutiao.com/search?keyword=成都初中生校内身亡：系自缢)
 1. [梅西谈被吐口水：不认识他](https://so.toutiao.com/search?keyword=梅西谈被吐口水：不认识他)
-1. [奔驰无视鸣笛强行变道出事故](https://so.toutiao.com/search?keyword=奔驰无视鸣笛强行变道出事故)
-1. [美国“左派”因为巴以起“内讧”](https://so.toutiao.com/search?keyword=美国“左派”因为巴以起“内讧”)
-1. [中国男篮有望递补金牌吗](https://so.toutiao.com/search?keyword=中国男篮有望递补金牌吗)
 1. [小伙一路狂飙撞了女子又撞小车](https://so.toutiao.com/search?keyword=小伙一路狂飙撞了女子又撞小车)
 1. [美官员：无迹象表明俄直接参与袭以](https://so.toutiao.com/search?keyword=美官员：无迹象表明俄直接参与袭以)
 1. [联合国：已有逾42万加沙人流离失所](https://so.toutiao.com/search?keyword=联合国：已有逾42万加沙人流离失所)
-1. [媒体：鼓励生育不能只盯着二孩](https://so.toutiao.com/search?keyword=媒体：鼓励生育不能只盯着二孩)
-1. [媒体：一汽丰田怼顾客损失不止10万](https://so.toutiao.com/search?keyword=媒体：一汽丰田怼顾客损失不止10万)
-1. [豆腐脑甜咸之争终于能和解了](https://so.toutiao.com/search?keyword=豆腐脑甜咸之争终于能和解了)
-1. [杜特尔特建议以方“把加沙变墓地”](https://so.toutiao.com/search?keyword=杜特尔特建议以方“把加沙变墓地”)
-1. [去年我国出生人口956万 二孩占近4成](https://so.toutiao.com/search?keyword=去年我国出生人口956万+二孩占近4成)
 1. [涂磊评北极鲶鱼事件](https://so.toutiao.com/search?keyword=涂磊评北极鲶鱼事件)
-1. [为何一夜之间美元停止加息](https://so.toutiao.com/search?keyword=为何一夜之间美元停止加息)
-1. [出生人口三孩占比15.0%预示着什么](https://so.toutiao.com/search?keyword=出生人口三孩占比15.0%预示着什么)
-1. [李湘王岳伦为王诗龄庆14岁生日](https://so.toutiao.com/search?keyword=李湘王岳伦为王诗龄庆14岁生日)
 1. [黄金价格或迎来历史新高](https://so.toutiao.com/search?keyword=黄金价格或迎来历史新高)
-1. [女方妈妈要彩礼男子母亲认为是骗婚](https://so.toutiao.com/search?keyword=女方妈妈要彩礼男子母亲认为是骗婚)
-1. [被举报性骚扰男生为保送生？武大回应](https://so.toutiao.com/search?keyword=被举报性骚扰男生为保送生？武大回应)
-1. [白宫：第二艘美国航母将抵达中东](https://so.toutiao.com/search?keyword=白宫：第二艘美国航母将抵达中东)
 1. [姑姑结婚小侄子搞笑致辞](https://so.toutiao.com/search?keyword=姑姑结婚小侄子搞笑致辞)
 1. [追忆郭宝昌](https://so.toutiao.com/search?keyword=追忆郭宝昌)
 1. [女子300元卖周杰伦演唱会阳台票](https://so.toutiao.com/search?keyword=女子300元卖周杰伦演唱会阳台票)
@@ -55,10 +75,7 @@
 1. [大妈南京大屠杀纪念馆比耶拍照遭呵斥](https://so.toutiao.com/search?keyword=大妈南京大屠杀纪念馆比耶拍照遭呵斥)
 1. [施工单位回应工地女工内衣多次被盗](https://so.toutiao.com/search?keyword=施工单位回应工地女工内衣多次被盗)
 1. [流浪狗不愿坐车尾 民警让其坐车里](https://so.toutiao.com/search?keyword=流浪狗不愿坐车尾+民警让其坐车里)
-1. [业内揭秘黄牛割肉退周杰伦门票原因](https://so.toutiao.com/search?keyword=业内揭秘黄牛割肉退周杰伦门票原因)
-1. [国内油价10月24日再次迎来调整](https://so.toutiao.com/search?keyword=国内油价10月24日再次迎来调整)
 1. [如何看待美国目前对华策略](https://so.toutiao.com/search?keyword=如何看待美国目前对华策略)
-1. [广州警方通报乘客裙子现不明液体](https://so.toutiao.com/search?keyword=广州警方通报乘客裙子现不明液体)
 1. [官方通报公职人员出轨：降为一级科员](https://so.toutiao.com/search?keyword=官方通报公职人员出轨：降为一级科员)
 1. [山西一政府单位否认31人罢工：P图](https://so.toutiao.com/search?keyword=山西一政府单位否认31人罢工：P图)
 1. [萧敬严：韩国瑜不应接国民党副主席](https://so.toutiao.com/search?keyword=萧敬严：韩国瑜不应接国民党副主席)
@@ -90,7 +107,6 @@
 1. [杨利伟将前往着陆场迎神十六航天员](https://so.toutiao.com/search?keyword=杨利伟将前往着陆场迎神十六航天员)
 1. [贵州6名干部涉嫌严重违纪违法被查](https://so.toutiao.com/search?keyword=贵州6名干部涉嫌严重违纪违法被查)
 1. [多家丰田4S店直播网友评“怕被骂”](https://so.toutiao.com/search?keyword=多家丰田4S店直播网友评“怕被骂”)
-1. [旅游博主：因是中国人在叙获善待](https://so.toutiao.com/search?keyword=旅游博主：因是中国人在叙获善待)
 1. [开盘：A股三大指数全线低开](https://so.toutiao.com/search?keyword=开盘：A股三大指数全线低开)
 1. [男子误喝防冻液去世 医生解读危害](https://so.toutiao.com/search?keyword=男子误喝防冻液去世+医生解读危害)
 1. [以方：人质回家前将持续断加沙水电](https://so.toutiao.com/search?keyword=以方：人质回家前将持续断加沙水电)
@@ -143,7 +159,6 @@
 1. [为什么年轻人也开始被肺癌盯上](https://so.toutiao.com/search?keyword=为什么年轻人也开始被肺癌盯上)
 1. [普京被国际法院发逮捕令后首出国门](https://so.toutiao.com/search?keyword=普京被国际法院发逮捕令后首出国门)
 1. [武大调查女生举报图书馆遭性骚扰](https://so.toutiao.com/search?keyword=武大调查女生举报图书馆遭性骚扰)
-1. [医生谈为什么肺癌越来越年轻化](https://so.toutiao.com/search?keyword=医生谈为什么肺癌越来越年轻化)
 1. [中科大回应拟撤销英语等本科专业](https://so.toutiao.com/search?keyword=中科大回应拟撤销英语等本科专业)
 1. [北约秘书长：将加大对乌克兰军援](https://so.toutiao.com/search?keyword=北约秘书长：将加大对乌克兰军援)
 1. [中国工会第十八次全国代表大会闭幕](https://so.toutiao.com/search?keyword=中国工会第十八次全国代表大会闭幕)
